--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "flowbite-react patch && flowbite-react register"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
